--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "webpack-babel",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://vinogradovlad.github.io/spa-real-estate",
   "main": "index.js",
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
@@ -13,12 +14,15 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "babel-loader": "^8.1.0",
+    "gh-pages": "^6.0.0",
     "html-webpack-plugin": "^5.5.1",
     "webpack": "^5.76.3",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open"
